test/fail/Codata.agda
module Codata where

codata D : Set where
